# Asynchronous-Django-eCommerce-API-with-Psycopg3-and-Uvicorn

./: .env  .gitignore  README.md  pyproject.toml  run_server.py
accounts/: admin.py  auth_backends.py  models.py  serializers.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_telegramaccountlink_is_active_and_more.py
api/: urls.py
auditlog/: admin.py  apps.py  middleware.py  models.py  records.py  registry.py  signals.py  tasks.py
auditlog/migrations/: 0001_initial.py
core/: asgi.py  celery.py  decorators.py  urls.py
core/core/: exceptions.py  renderers.py
core/settings/: __init__.py  base.py  config.py
core/utils/: pagination.py
dynamic_config/: apps.py  config.py  models.py  services.py  signals.py
dynamic_config/migrations/: 0001_initial.py
shop/: admin.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_product_thumbnail.py
signature_auth/: apps.py  middleware.py  utils.py
